Fix/hwpd 3025/homepage image scaling (#864)
* fix/HWPD-3025/homepage-image-scaling

Adjusted homepage image scaling. Now that we have an image cropper in CMS we can be a bit freer with the positioning.
Basically, before we had a portion of the image wrapper offscreen, and align the img into the visible area
Now we fill the image in the visible area, with the assumption that the content admin will create a nicely cropper portrait/square image.

* fix/HWPD-3025/homepage-image-scaling

* fix/HWPD-3025/homepage-image-scaling

* fix/HWPD-3025/homepage-image-scaling

Adjusted title width to scale better with new content

* fix/HWPD-3025/homepage-image-scaling

--- a/src/component-library/site-components/HomepageHero/HomepageHero.module.scss
+++ b/src/component-library/site-components/HomepageHero/HomepageHero.module.scss
@@ -85,21 +85,30 @@
   z-index: -1;
 
   @include media(screen-m) {
-    right: calc(var(--image-size) * -0.36);
-    bottom: calc(var(--image-size) * -0.25);
+    right: 0;
+    bottom: px-to-rem(-150);
+    width: 70vw;
+    height: 120vw;
+    max-width: px-to-rem(500);
+    max-height: px-to-rem(900);
     left: unset;
     transform: none;
+    mask-size: cover;
+    mask-position: left center;
   }
 
   @include media(screen-l) {
-    top: -46%;
-    right: calc(var(--image-size) * -0.5);
-    bottom: unset;
+    right: 0;
+    bottom: px-to-rem(-300);
+    height: calc(100vh + 2 * px-to-rem(300));
+    width: 45vw;
+    left: unset;
+    max-width: initial;
+    max-height: initial;
   }
 
   @include media(screen-xl) {
-    top: -42%;
-    right: calc(var(--image-size) * -0.4);
+    width: 55vw;
   }
 
   img {
@@ -107,9 +116,5 @@
     height: 100%;
     object-position: center;
     object-fit: cover;
-
-    @include media(screen-m) {
-      object-position: right;
-    }
   }
 }
